[gd_scene load_steps=2 format=3 uid="uid://bhr0d2o0bobp8"]

[ext_resource type="Script" path="res://GameManagerTestingFolder/DestinySelect.gd" id="1_6ftnr"]

[node name="DestinySelect" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6ftnr")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="VBC" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="Button" type="Button" parent="MC/VBC"]
layout_mode = 2
text = "뒤로가기"

[node name="DestinyContainer" type="HBoxContainer" parent="MC/VBC"]
layout_mode = 2
size_flags_vertical = 3

[node name="Death" type="Button" parent="MC/VBC/DestinyContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "죽음"

[node name="Luck" type="Button" parent="MC/VBC/DestinyContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "행운"

[node name="Devotion" type="Button" parent="MC/VBC/DestinyContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "헌신"

[node name="Wealth" type="Button" parent="MC/VBC/DestinyContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "부"

[connection signal="pressed" from="MC/VBC/Button" to="." method="cancel"]
[connection signal="pressed" from="MC/VBC/DestinyContainer/Death" to="." method="deathSelect"]
[connection signal="pressed" from="MC/VBC/DestinyContainer/Luck" to="." method="luckSelect"]
[connection signal="pressed" from="MC/VBC/DestinyContainer/Devotion" to="." method="devotionSelect"]
[connection signal="pressed" from="MC/VBC/DestinyContainer/Wealth" to="." method="wealthSelect"]
